tests/fixtures/LatestTests/TypeConversionFunctionTests/errors/no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Int32())

